--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,3 +9,12 @@
 @import "tailwindcss/utilities";
 
 /* Add custom utilities here... */
+
+.table th, td {
+    padding: 0.75rem 1.25rem;
+}
+.table th {
+    font-weight: 400;
+    padding: .5rem 1.25rem;
+    border-bottom: 0;
+}
